--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -1,6 +1,6 @@
 # The Standard Model of Particle Physics
 
-**A law-level reconstruction of the gauge group, fermion content, generation count, and anomaly structure from determinant-closed $\mathrm{SO}(10)$ admissibility — within the Tier-0 framework.**
+**A law-level reconstruction of the gauge group, fermion content, generation count, and anomaly structure from determinant-closed $\mathrm{SO}(10)$ admissibility.**
 
 ---
 
@@ -24,21 +24,21 @@
 
 ## 1. The Deepest Question in Particle Physics
 
-The Standard Model of particle physics is not merely successful — it is unreasonably successful. Its predictions have been confirmed to more than ten decimal places. It accounts for three of the four known fundamental forces, classifies every observed elementary particle, and has survived every experimental test thrown at it for half a century.
+The Standard Model of particle physics is not merely successful, it is unreasonably successful. Its predictions have been confirmed to more than ten decimal places. It accounts for three of the four known fundamental forces, classifies every observed elementary particle, and has survived every experimental test thrown at it for half a century.
 
 And yet the Standard Model has a secret: it does not explain itself.
 
-The gauge group $\mathrm{SU}(3) \times \mathrm{SU}(2) \times \mathrm{U}(1)$. The chiral fermion content — quarks and leptons arranged in left-handed doublets and right-handed singlets. The specific hypercharge assignments that produce fractional electric charges. The cancellation of quantum anomalies across an intricate web of representation-theoretic constraints. The existence of exactly three generations of matter. All of these features are inputs to the Standard Model, not outputs of it. They are written into the Lagrangian by hand, on the basis that they work. Physics has never explained *why* they work — why this particular structure, out of the vast space of algebraically conceivable alternatives, is the one that nature selected.
+The gauge group $\mathrm{SU}(3) \times \mathrm{SU}(2) \times \mathrm{U}(1)$. The chiral fermion content quarks and leptons arranged in left-handed doublets and right-handed singlets. The specific hypercharge assignments that produce fractional electric charges. The cancellation of quantum anomalies across an intricate web of representation-theoretic constraints. The existence of exactly three generations of matter. All of these features are inputs to the Standard Model, not outputs of it. They are written into the Lagrangian by hand, on the basis that they work. Physics has never explained why they work or why this particular structure, out of the vast space of algebraically conceivable alternatives, is the one that nature selected.
 
 This is not an aesthetic complaint. It is a structural question with precise mathematical content: *is there a principled reason why the observed particle content of the universe takes the form it does, or is it an accident?*
 
-The work presented here answers that question. Within the Tier-0 framework and its determinant-closed admissibility discipline, the Standard Model gauge group, fermion representations, hypercharge quantization, anomaly cancellation, and generation count are not chosen — they are *inherited* as the unique admissible low-energy realization of a structurally forced unification carrier.
+The work presented here answers that question. Within the Tier-0 framework and its determinant-closed admissibility discipline, the Standard Model gauge group, fermion representations, hypercharge quantization, anomaly cancellation, and generation count are not chosen, they are inherited as the unique admissible low-energy realization of a structurally forced unification carrier.
 
 ---
 
 ## 3. The Observed Infrared Record
 
-The reconstruction target — the structure that must be reproduced — is the experimentally observed low-energy particle content:
+The reconstruction target: The structure that must be reproduced is the experimentally observed low-energy particle content:
 
 **Gauge group:**
 $$
@@ -121,7 +121,7 @@ $$
 
 ## 6. One Generation from One Irreducible
 
-> **One complete generation of Standard Model fermions — including the right-handed neutrino — is hosted by a single irreducible representation of $\mathrm{SO}(10)$: the spinor $16_F$.**
+> **One complete generation of Standard Model fermions including the right-handed neutrino is hosted by a single irreducible representation of $\mathrm{SO}(10)$: the spinor $16_F$.**
 
 The Standard Model fermion spectrum is the *complete restriction* of $16_F$ to the infrared gauge group
 
@@ -135,7 +135,7 @@ Two structural consequences follow immediately:
 The restricted spectrum is chiral because the $\mathrm{SO}(10)$ spinor is chiral.
 
 **The right-handed neutrino is structural.**
-The 16th state is $\nu_R$ — required by the representation, not added by hand.
+The 16th state is $\nu_R$ - required by the representation, not added by hand.
 
 ---
 
@@ -169,7 +169,7 @@ $$
 \frac{1}{4} - \frac{1}{4} = 0
 $$
 
-The Witten $\mathrm{SU}(2)_L$ global anomaly is satisfied because each generation contains exactly four left-handed $\mathrm{SU}(2)$ doublets — an even number.
+The Witten $\mathrm{SU}(2)_L$ global anomaly is satisfied because each generation contains exactly four left-handed $\mathrm{SU}(2)$ doublets an even number.
 
 Anomaly cancellation is inherited, not tuned.
 
@@ -301,6 +301,7 @@ $$
 **Supporting papers:** See the papers section below for full technical details, proofs, and formal statements.
 
 © 2026 Jeremy Rodgers. All rights reserved. Content released under CC BY-NC-ND 4.0 unless otherwise stated.
+
 
 
 
