--- a/content/manual/problems/quantum-measurement.mdx
+++ b/content/manual/problems/quantum-measurement.mdx
@@ -69,9 +69,11 @@ This is the central question of the **Tier-0 framework**. Rather than asking how
 
 The answer is encoded in a single structural identity:
 
-> $$\mathcal{L} = \Omega \Delta \partial(\mathcal{L})$$
->
-> *The Everything Equation — the universal admissibility condition*
+$$
+\mathcal{L} = \Omega \Delta \partial(\mathcal{L})
+$$
+
+*The Everything Equation — the universal admissibility condition*
 
 A state or law $\mathcal{L}$ is admissible — it can persist as a stable, self-consistent feature of physical reality — if and only if it is a *fixed point* of the composite operator $\Omega\Delta\partial$. Three operators, each with a distinct structural role:
 
@@ -259,16 +261,76 @@ The implications for the free will debate are precise and limited but structural
 
 ## 11. How This Compares to Every Other Approach
 
-| Approach               | Collapse           | Outcome Uniqueness     | Born Rule                              | Observer Role           |
-| ---------------------- | ------------------ | ---------------------- | -------------------------------------- | ----------------------- |
-| **Copenhagen**         | Postulated         | Postulated             | Postulated                             | Ambiguous               |
-| **Many-Worlds**        | Denied             | Denied                 | From branching (contested)             | None                    |
-| **Bohmian**            | Effective only     | Yes (hidden variables) | Assumed (equilibrium)                  | None                    |
-| **GRW / Collapse**     | Added (stochastic) | Yes                    | Assumed                                | None                    |
-| **Consciousness**      | Observer-caused    | Yes                    | Postulated                             | Required                |
-| **Decoherence**        | Approximate        | Not derived            | Assumed                                | None                    |
-| **Gleason-type**       | Not addressed      | Not addressed          | Derived (assumes Hilbert space)        | N/A                     |
-| **Tier-0 / This work** | **Derived**        | **Derived**            | **Derived (no Hilbert space assumed)** | **Irrelevant (proven)** |
+<table>
+  <thead>
+    <tr>
+      <th>Approach</th>
+      <th>Collapse</th>
+      <th>Outcome Uniqueness</th>
+      <th>Born Rule</th>
+      <th>Observer Role</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><strong>Copenhagen</strong></td>
+      <td>Postulated</td>
+      <td>Postulated</td>
+      <td>Postulated</td>
+      <td>Ambiguous</td>
+    </tr>
+    <tr>
+      <td><strong>Many-Worlds</strong></td>
+      <td>Denied</td>
+      <td>Denied</td>
+      <td>From branching (contested)</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <td><strong>Bohmian</strong></td>
+      <td>Effective only</td>
+      <td>Yes (hidden variables)</td>
+      <td>Assumed (equilibrium)</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <td><strong>GRW / Collapse</strong></td>
+      <td>Added (stochastic)</td>
+      <td>Yes</td>
+      <td>Assumed</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <td><strong>Consciousness</strong></td>
+      <td>Observer-caused</td>
+      <td>Yes</td>
+      <td>Postulated</td>
+      <td>Required</td>
+    </tr>
+    <tr>
+      <td><strong>Decoherence</strong></td>
+      <td>Approximate</td>
+      <td>Not derived</td>
+      <td>Assumed</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <td><strong>Gleason-type</strong></td>
+      <td>Not addressed</td>
+      <td>Not addressed</td>
+      <td>Derived (assumes Hilbert space)</td>
+      <td>N/A</td>
+    </tr>
+    <tr>
+      <td><strong>Tier-0 / This work</strong></td>
+      <td><strong>Derived</strong></td>
+      <td><strong>Derived</strong></td>
+      <td><strong>Derived (no Hilbert space assumed)</strong></td>
+      <td><strong>Irrelevant (proven)</strong></td>
+    </tr>
+  </tbody>
+</table>
+
 
 The critical distinction is not merely that the Tier-0 framework derives more results. It is that the derivations share a single structural source — the closure condition $\mathcal{L} = \Omega\Delta\partial(\mathcal{L})$ — applied to the quantum law-space. Collapse, outcome uniqueness, the Born rule, its quadratic exponent, consciousness independence, temporal Markovianity, and the structure of agency all follow from one admissibility principle. No other framework in the literature achieves this.
 
