--- a/content/manual/problems/quantum-measurement.mdx
+++ b/content/manual/problems/quantum-measurement.mdx
@@ -362,9 +362,12 @@ The Tier-0 resolution is not merely conceptual. It generates concrete, testable 
 
 Perhaps the most striking feature is the unification. Measurement outcomes arise from closure-stable record formation. Probabilities arise from closure-rigid law-space geometry. Temporal quantum states inherit admissibility constraints that force Markovian structure. Agency arises from closure-stable fixed points of coupled decision systems. These are not four separate results grafted together. They are four manifestations of a single structural principle:
 
-> $$\mathcal{L} = \Omega \Delta \partial(\mathcal{L})$$
->
-> *One equation. One principle. Four resolutions.*
+$$
+\mathcal{L} = \Omega \Delta \partial(\mathcal{L})
+$$
+
+*One equation. One principle. Four resolutions.*
+
 
 The quantum measurement problem has persisted for nearly a hundred years not because it is insoluble, but because the solution lives at a level of structural abstraction that the traditional interpretational frameworks were not equipped to reach. The answer was never about choosing between Copenhagen, Many-Worlds, or Bohm. The answer is that admissible physical law has a fixed-point structure and that structure determines collapse, probability, uniqueness, and agency as mathematical consequences.
 
