--- a/content/manual/problems/quantum-measurement.mdx
+++ b/content/manual/problems/quantum-measurement.mdx
@@ -27,9 +27,11 @@ Quantum mechanics is, by every empirical measure, the most successful physical t
 
 The difficulty is deceptively simple to state. A quantum system, say an electron, can exist in a superposition of multiple states simultaneously. The mathematical formalism of quantum mechanics describes this beautifully via the Schrödinger equation, which governs the smooth, deterministic, reversible evolution of a quantum state vector. But when we measure the electron, we never observe a superposition. We always see one definite outcome. The superposition "collapses" into a single result with a probability given by the Born rule:
 
-> $$P_k = |\langle \psi|\phi_k\rangle|^2$$
->
-> *The Born Rule - postulated, never explained*
+$$
+P_k = |\langle \psi|\phi_k\rangle|^2
+$$
+
+*The Born Rule — postulated, never explained*
 
 This is the heart of the problem. Quantum mechanics contains two fundamentally incompatible modes of evolution. On one side: smooth, linear, deterministic, reversible Schrödinger dynamics. On the other: sudden, nonlinear, probabilistic, irreversible measurement collapse. There is nothing in the standard formalism that explains when one mode ends and the other begins, what constitutes a "measurement," or why the particular probability rule $P_k = |\alpha_k|^2$ governs the statistics of outcomes.
 
