--- a/content/manual/problems/quantum-measurement.mdx
+++ b/content/manual/problems/quantum-measurement.mdx
@@ -31,7 +31,7 @@ $$
 P_k = |\langle \psi|\phi_k\rangle|^2
 $$
 
-*The Born Rule — postulated, never explained*
+*The Born Rule - postulated, never explained*
 
 This is the heart of the problem. Quantum mechanics contains two fundamentally incompatible modes of evolution. On one side: smooth, linear, deterministic, reversible Schrödinger dynamics. On the other: sudden, nonlinear, probabilistic, irreversible measurement collapse. There is nothing in the standard formalism that explains when one mode ends and the other begins, what constitutes a "measurement," or why the particular probability rule $P_k = |\alpha_k|^2$ governs the statistics of outcomes.
 
