--- a/content/manual/problems/quantum-measurement.mdx
+++ b/content/manual/problems/quantum-measurement.mdx
@@ -83,7 +83,7 @@ A state or law $\mathcal{L}$ is admissible it can persist as a stable, self-cons
 
 **$\Delta$ (Collapse/Constraint):** Enforces constraints. Suppresses unstable modes, performs coarse-graining, implements decoherence. This is the dissipative engine that eliminates structure incompatible with stability.
 
-**$\Omega$ (Closure):** Projects onto the stable subspace. Idempotent — $\Omega^2 = \Omega$. Whatever survives closure is admissible. Whatever doesn't, cannot persist.
+**$\Omega$ (Closure):** Projects onto the stable subspace. Idempotent $\Omega^2 = \Omega$. Whatever survives closure is admissible. Whatever doesn't, cannot persist.
 
 The composition $T = \Omega \circ \Delta \circ \partial$ forms a contractive map each application brings the system closer to its fixed point. By the Banach fixed-point theorem, a unique stable endpoint exists. Under appropriate conditions, *every* initial state converges to this endpoint under iterated application of $T$.
 
