--- a/content/manual/problems/quantum-measurement.mdx
+++ b/content/manual/problems/quantum-measurement.mdx
@@ -161,7 +161,8 @@ Furthermore, iterated application of $T_Q$ converges in a single step to the dia
 
 ## 7. Why the Square? Rigidity of the Quadratic Exponent
 
-The structural derivation of the Born rule from the measurement map establishes *that* the probabilities are $|\alpha_k|^2$. But a deeper question remains: *why* the exponent $2$? Could physics have been different? Could probability weights have been proportional to $|\alpha_k|^3$, or $|\alpha_k|^{1.5}$, or some other power?
+The structural derivation of the Born rule from the measurement map establishes *that* the probabilities are $|\alpha_k|^2$. But a deeper question remains: *why* the exponent $2$? Could physics have been different? Could probability weights have been proportional to $|\alpha_k|^3$, or $|\alpha_k|^{3/2}$, or some other power?
+
 
 The answer is no and the proof is the most mathematically striking result in the entire program. The quadratic exponent is not merely convenient, or empirically observed, or chosen by convention. It is the unique value compatible with the structural stability of physical law itself.
 
