--- a/content/manual/problems/quantum-measurement.mdx
+++ b/content/manual/problems/quantum-measurement.mdx
@@ -178,7 +178,7 @@ Admissible physical law must be stable under the recursive generative dynamics t
 
 The admissible constraint manifold, the surface on which stable laws can reside must have a fixed Euler characteristic $\chi = 8$. This topological invariant encodes the structural capacity required for stabilization: neither too many degrees of freedom nor too few. Curvature-driven instabilities at $p \ne 2$ induce topological transitions (volume collapse or sectional blow-up) that violate this constraint. Only the Hilbert–Schmidt geometry preserves the topology of the constraint manifold under the linearized law-space flow.
 
-### Algebra–Geometry Duality (Monad Duality at Tier-$\Omega$)
+### Algebra Geometry Duality (Monad Duality at Tier-$\Omega$)
 
 At the highest structural level, admissible laws must satisfy a bidual closure condition: the geometric renormalization flow (governing perturbations in law-space) must coincide with the algebraic modular flow (the Tomita–Takesaki automorphism group of the fixed-point algebra). This is a categorical identification, the two one-parameter flows must be isomorphic. The Tomita–Takesaki modular operator is defined with respect to the GNS inner product, which is canonically isomorphic to the Hilbert–Schmidt inner product. For any $p \ne 2$, the Schatten metric is either Finslerian or non-isometric to the GNS pairing, and the identification fails. The algebra–geometry duality is possible if and only if $p = 2$.
 
