--- a/content/manual/problems/grand-unified-theory.mdx
+++ b/content/manual/problems/grand-unified-theory.mdx
@@ -1,142 +1,346 @@
-# Unification Is Not a Guess - It Is Forced
+# Grand Unified Theory
 
-For fifty years, Grand Unified Theories have suffered from a credibility problem.
-
-Not because they are wrong -
-but because they are optional.
-
-Starting from the same low-energy facts the Standard Model gauge group, its chiral fermion spectrum, anomaly cancellation, and the existence of neutrino mass theorists have written down many ultraviolet completions. SU(5). Flipped SU(5). SO(10). E6. Variants with extra Higgs sectors, extra thresholds, extra tuning knobs.
-
-All of them can be made to work ***if you choose enough structure by hand***.
-
-That freedom is not a virtue.
-It is a failure of selection.
-
-This paper takes a different position:
-
-> ***If a unified theory is real, it should not be chosen. It should be forced by the record.***
+**A determinant-closed derivation of $\mathrm{SO}(10)$ as the unique law-bearing unification carrier — forced by the Standard Model record predicates under anomaly closure, neutrino rigidity, and structural minimality.**
 
 ---
 
-## The Core Claim 
+## Contents
 
-Within a determinant-closed admissibility framework, one that enforces anomaly closure, fermion completeness, neutrino rigidity, and explicit minimality after record-quotienting the Standard Model record predicates force a unique traditional Grand Unified completion.
-
-That completion is **SO(10)**.
-
-Not as an ansatz.
-Not as an aesthetic preference.
-Not because it is popular.
-
-**Because every alternative costs more structure than the record can justify.**
-
----
-
-## What “Determinant-Closed” Actually Means
-
-This is not a new symmetry proposal.
-It is a selection principle.
-
-A candidate completion is treated as law-bearing only if it survives a fixed-point recursion:
-
-* remove record-silent structure,
-* collapse prediction-degenerate branches,
-* complete to a minimal, stable form.
-
-Anything that survives this process is admissible.
-Anything that does not is model-building noise.
-
-Minimality is not rhetorical. It is enforced by an explicit complexity functional that penalizes:
-
-* residual anomalies (post-quotient),
-* fragmented fermion hosting,
-* excessive Higgs or breaking structure,
-* unnecessary group overgrowth.
-
-Nothing is tuned.
-Nothing is fit.
-Nothing is forgiven because it “might work.”
+1. [The Over-Choice Problem in Grand Unification](#1-the-over-choice-problem-in-grand-unification)
+2. [What a Selection Principle Must Do](#2-what-a-selection-principle-must-do)
+3. [Determinant-Closed Admissibility](#3-determinant-closed-admissibility)
+4. [The Complexity Functional: How Minimality Is Made Explicit](#4-the-complexity-functional-how-minimality-is-made-explicit)
+5. [Neutrino Rigidity: The Decisive Constraint](#5-neutrino-rigidity-the-decisive-constraint)
+6. [The Forcing Theorem: Why $\mathrm{SO}(10)$ and Nothing Else](#6-the-forcing-theorem-why-mathrmso10-and-nothing-else)
+7. [The Competitive Exclusion — Carrier by Carrier](#7-the-competitive-exclusion--carrier-by-carrier)
+8. [The $5/3$ Factor Without Assuming Any Unified Group](#8-the-53-factor-without-assuming-any-unified-group)
+9. [Unique Breaking Architecture and Minimal Higgs Content](#9-unique-breaking-architecture-and-minimal-higgs-content)
+10. [The Collapse of Model-Building Freedom](#10-the-collapse-of-model-building-freedom)
+11. [What This Does Not Claim](#11-what-this-does-not-claim)
+12. [What This Means for Particle Physics](#12-what-this-means-for-particle-physics)
 
 ---
 
-## Why SO(10) Survives and Everything Else Fails
+## 1. The Over-Choice Problem in Grand Unification
 
-Once neutrino mass is treated as a hard record predicate, the space of admissible completions collapses violently.
+Grand Unified Theories have been part of theoretical physics for half a century. The idea is powerful: the three gauge forces of the Standard Model — strong, weak, and electromagnetic — might descend from a single unified gauge symmetry at high energies, with the distinct forces emerging as the symmetry breaks down at lower scales.
 
-Here is what the framework forces:
+The problem is not that unification fails. The problem is that it succeeds too easily.
 
-* **Anomaly closure must hold after quotienting**, not merely “in principle” in a larger UV story.
-* **One generation must be hosted economically**, without fragmenting chiral matter across unrelated irreducible representations.
-* **The right-handed neutrino cannot be an external patch.** It must be internal to the carrier.
-* **The neutrino sector must be rigid**, collapsing to the seesaw equivalence class without tuning.
-* **Symmetry breaking must be stable**, minimal, and free of non-record intermediate clutter.
+Starting from the same low-energy facts — the Standard Model gauge group $\mathrm{SU}(3)_c \times \mathrm{SU}(2)_L \times \mathrm{U}(1)_Y$, its chiral fermion spectrum, anomaly cancellation, and the experimental evidence for neutrino mass — physicists have constructed many ultraviolet completions. $\mathrm{SU}(5)$ in its original Georgi-Glashow form. Flipped $\mathrm{SU}(5) \times \mathrm{U}(1)$. $\mathrm{SO}(10)$. $\mathrm{E}_6$. Trinification models. Pati-Salam constructions. Variants with additional Higgs sectors, intermediate symmetry-breaking scales, threshold corrections, and model-dependent tuning.
 
-Under these conditions:
+All of them can be made compatible with the observed low-energy physics — *if you choose enough structure by hand*.
 
-* Minimal SU(5) fails neutrino rigidity.
-* SU(5) plus singlets survives only by paying extra Higgs and breaking cost.
-* Flipped SU(5) incurs non-record branching penalties.
-* Larger groups (E6 and above) introduce exotic surplus not forced by the record.
-* Multi-stage or overbuilt Higgs sectors inflate complexity without adding law.
+That freedom is not a virtue. It is a failure of selection. If the unified group is chosen by physicists rather than forced by the physics, then unification is a modelling convention, not a law. And if every proposed GUT requires auxiliary assumptions — chosen Higgs representations, chosen breaking chains, chosen threshold structures, chosen flavour textures — to reproduce the same low-energy record, then the "prediction" is really a retroactive fit dressed in the language of symmetry.
 
-**SO(10) is the only carrier that closes all constraints at once, with minimal cost.**
+The work presented here takes a different position entirely. It asks:
+
+> *Is there a canonical admissibility and minimality principle under which the Standard Model record predicates force a unique Grand Unified completion — not as a hypothesis, but as a structural necessity?*
+
+The answer is yes. The forced completion is $\mathrm{SO}(10)$.
 
 ---
 
-## The Result Is Traditional - The Logic Is Not
+## 2. What a Selection Principle Must Do
 
-What emerges looks familiar:
+To avoid replacing one set of ad hoc choices with another, a genuine selection principle must satisfy several non-trivial requirements:
 
-* One generation fits into a single irreducible.
-* Anomalies cancel automatically.
-* Neutrino masses arise naturally.
-* Hypercharge normalization locks to the canonical 5/3 factor.
-* A minimal Higgs architecture suffices.
-* Coupling near-unification is explainable without repair structure.
+It must **not assume a unified group**. If $\mathrm{SO}(10)$ appears at the end, it must be derived, not inserted as a starting point. The principle must be capable of considering — and rejecting — all alternatives.
 
-But the status of these facts is different.
+It must **not use phenomenological fitting**. Adjusting parameters to match observations is not selection; it is reverse engineering. The principle must operate before any coupling constants, mass hierarchies, or mixing angles are specified.
 
-They are not motivations.
-They are outputs.
+It must **define minimality explicitly**. "Simplicity" as an aesthetic preference is not a scientific criterion. Minimality must be encoded in a concrete mathematical functional that can be computed and compared across candidates.
 
-The framework does not assume unification.
-It shows that unification is the only law-bearing completion compatible with the record.
+It must **respect the record**. Structures that are invisible to observation at the ledger scale — that produce no measurable effect at the energies where the Standard Model operates — must not be credited toward selection. Only record-visible features count.
+
+It must **enforce anomaly closure after quotienting**. Anomaly cancellation must hold in the record-visible sector, not merely "in principle" within a larger UV construction where cancellations might depend on structure that has been integrated out.
+
+The Tier-0 determinant-closed admissibility framework satisfies all of these requirements.
 
 ---
 
-## This Is Not Model-Building
+## 3. Determinant-Closed Admissibility
 
-Nothing in this paper:
+A candidate completion — any proposed UV gauge theory that reduces to the Standard Model at low energies — is treated as law-bearing only if it is a fixed point of the closure recursion:
 
-* fits Yukawa matrices,
-* tunes thresholds,
-* chooses symmetry-breaking chains by hand,
-* invokes aesthetics,
-* assumes supersymmetry,
-* assumes string theory,
-* or assumes a unified group at the start.
+$$
+\mathcal{L} = \Omega,\Delta,\partial(\mathcal{L})
+$$
 
-The conclusion is narrower and stronger:
+Three operators, applied in sequence, implement the structural test:
 
-> **Given what is already observed, the freedom to choose a GUT evaporates.**
+**$\partial$ (Record quotient).** Strips away structure that does not contribute to the record predicates at the ledger scale $\mu_L$. Hidden sectors, sterile fields with no measurable couplings, and UV structure that is invisible to low-energy observation are quotiented out. What remains after $\partial$ is the record-visible skeleton of the candidate — the part that actually matters.
+
+**$\Delta$ (Degeneracy collapse).** Identifies prediction-equivalent branches. If two different symmetry-breaking chains, or two different Higgs sector configurations, or two different intermediate-scale architectures produce the same observable physics at $\mu_L$ after record quotienting, they are collapsed into a single equivalence class. This eliminates the illusion of choice created by model-building freedom that has no physical consequence.
+
+**$\Omega$ (Law completion).** Selects the minimal admissible fixed point from the collapsed candidate space. This is the closure operator: it completes admissible fragments to their law-bearing form and returns only those structures that are self-consistent under the entire pipeline.
+
+The condition $\mathcal{L} = \Omega\Delta\partial(\mathcal{L})$ states that the candidate is already in its canonical, law-bearing form: applying the quotient, collapse, and completion operators returns the candidate unchanged. Anything that is not a fixed point is either incomplete, overbuilt, or carrying structural noise that cannot survive the admissibility test.
+
+This is not a new symmetry proposal. It is a selection principle — a mathematical sieve that acts on the space of all conceivable UV completions and retains only those that are structurally stable, record-faithful, and minimally complex.
 
 ---
 
-## Why This Matters
+## 4. The Complexity Functional: How Minimality Is Made Explicit
 
-The usual criticism of GUTs is that they explain too much freedom with too many assumptions.
+Admissibility alone constrains but may not uniquely determine. Multiple candidates could survive the closure pipeline. To force a unique selection, the framework employs an explicit complexity functional:
 
-This work flips that criticism:
+$$
+\mathrm{Comp}(\mathcal{L}) = \mathcal{A}(\mathcal{L}) + \alpha, D_{\mathrm{ferm}}(\mathcal{L}) + \beta, D_{\mathrm{H}}(\mathcal{L}) + \gamma,\mathrm{rk}\big(G(\mathcal{L})\big)
+$$
 
-* If unification were arbitrary, it would not survive determinant-closure.
-* If SO(10) were merely convenient, it would lose to cheaper alternatives.
-* If neutrino mass were an afterthought, the selection would not be rigid.
+Each term penalises a specific form of structural excess, computed *after* record-quotienting and degeneracy collapse:
 
-Instead, the framework shows something sharper:
+**$\mathcal{A}(\mathcal{L})$ — Anomaly load.** The sum of absolute values of all record-visible anomaly coefficients after $\partial$-quotienting. This is zero for any admissible completion (anomaly cancellation is a hard constraint), but its inclusion ensures that near-cancellation without exact vanishing is not mistaken for admissibility.
 
-> **Once the record is taken seriously, unification stops being optional.**
+**$D_{\mathrm{ferm}}(\mathcal{L})$ — Fermion representation budget.** The total dimensionality of the fermionic representations needed to host three generations including $\nu_R$, computed post-$\partial$. Fragmenting a generation across multiple unrelated irreducible representations increases this budget. Vectorlike clutter that is not record-silent also contributes.
 
-SO(10) is not selected because it is elegant.
-It is selected because nothing else survives closure.
+**$D_{\mathrm{H}}(\mathcal{L})$ — Higgs and symmetry-breaking budget.** The total dimensionality of the Higgs representations required for a $\Delta$-stable breaking chain to the Standard Model, plus penalties for non-record intermediate breaking stages. Overbuilt Higgs sectors — additional representations beyond what is needed for symmetry breaking, Yukawa structure, and neutrino mass generation — inflate this term.
 
+**$\mathrm{rk}\big(G(\mathcal{L})\big)$ — Group rank.** The rank of the UV gauge group. Larger groups that are not forced by the record predicates are penalised for unnecessary structural inflation.
 
+The weights $\alpha, \beta, \gamma > 0$ are *ledger-locked*: they are endomorphism-level algebraic scalars, not tunable fit parameters. They do not deform spacetime geometry or alter physical content. And critically, in the forcing theorem that follows, the precise values of these weights do not matter. The complexity dominance of $\mathrm{SO}(10)$ over all alternatives is *strict for any positive choice of weights*. The result does not depend on fine-tuning the selection principle itself.
+
+The $\Omega$-initial completion is defined as the minimiser:
+
+$$
+\Omega_{\mathrm{init}}\big(R(\mu_L)\big) = \arg\min_{\mathcal{L} \in \mathrm{Adm}(R(\mu_L))} \mathrm{Comp}(\mathcal{L})
+$$
+
+---
+
+## 5. Neutrino Rigidity: The Decisive Constraint
+
+Neutrino oscillations — the experimental discovery that neutrinos have mass and mix between flavour states — are part of the record predicates at $\mu_L$. In conventional model-building, neutrino masses can be accommodated through many mechanisms: Dirac masses, Majorana masses, Type-I seesaw, Type-II seesaw, Type-III seesaw, radiative mechanisms, inverse seesaw, and various combinations. This plurality normally *enlarges* the space of viable completions.
+
+In the determinant-closed framework, neutrino physics plays the opposite role. It is a *rigidity constraint* — the single most powerful structural pressure in the entire selection problem.
+
+The combination of admissibility under $\Omega\Delta\partial$, $\Delta$-stability (no prediction-degenerate repair structure), and minimality under $D_{\mathrm{H}}$ and $D_{\mathrm{ferm}}$ collapses all admissible neutrino mechanisms to a single $\partial$-equivalence class: the seesaw form.
+
+$$
+M_\nu^{\mathrm{eff}} \sim_\partial -M_D^T M_R^{-1} M_D
+$$
+
+This is a proven result, not an assumption. Purely Dirac-only neutrino scenarios are excluded unless they collapse under the closure recursion to an effective operator of this same seesaw form. Multiple superimposed mechanisms are inadmissible unless their composite contribution reduces to a single fixed-point class. The neutrino sector is structurally rigid.
+
+The consequence for carrier selection is decisive. The seesaw mechanism requires a right-handed neutrino $\nu_R$ with a heavy Majorana mass $M_R$ generated by the Higgs sector. If $\nu_R$ is not internal to the unified generation representation — if it must be added as an external patch — then additional Higgs structure is needed to generate $M_R$, which increases $D_{\mathrm{H}}$, or additional fermion representations are required, which increases $D_{\mathrm{ferm}}$, or the construction introduces prediction-degenerate branches that violate $\Delta$-stability.
+
+This is the mechanism that eliminates most candidate carriers. It is not aesthetics. It is not preference. It is a structural incompatibility between the neutrino record predicate and the representation theory of specific groups, amplified through the admissibility budget.
+
+---
+
+## 6. The Forcing Theorem: Why $\mathrm{SO}(10)$ and Nothing Else
+
+The central result of the accompanying paper is a uniqueness theorem:
+
+> **Theorem (Determinant-Closed Uniqueness of $\mathrm{SO}(10)$).** Among all determinant-closed admissible completions of the Standard Model record predicates that satisfy neutrino rigidity, the $\Omega$-initial completion is uniquely $\mathrm{Spin}(10) \simeq \mathrm{SO}(10)$, with three generations embedded as $3 \times \mathbf{16}$ and a $\Delta$-stable Higgs/breaking sector realising the neutrino seesaw class without record-tuned insertions. For any other admissible completion $\mathcal{L} \neq \mathrm{SO}(10)$:
+>
+> $$\mathrm{Comp}(\mathcal{L}) > \mathrm{Comp}\big(\mathrm{SO}(10)\big)$$
+
+The proof proceeds through five dominance steps:
+
+**Step 1 — Anomaly closure.** All admissible completions have $\mathcal{A} = 0$ by construction. This establishes the floor but does not distinguish candidates. What it does enforce is that anomaly cancellation must hold *after* record-quotienting — candidates that rely on record-silent anomaly repairs are excluded.
+
+**Step 2 — Neutrino rigidity forces internal $\nu_R$ hosting.** The seesaw equivalence class requires $\nu_R$ inside the carrier representation. Any completion that externalises $\nu_R$ must supply additional Higgs couplings or additional fermion structure, inflating $D_{\mathrm{H}}$ or $D_{\mathrm{ferm}}$ beyond the $\mathrm{SO}(10)$ benchmark.
+
+**Step 3 — Fermion economy selects unified irreducible hosting.** Among traditional candidates, the minimal post-$\partial$ hosting of one full generation including $\nu_R$ in a single irreducible representation is achieved by the $\mathbf{16}$ spinor of $\mathrm{Spin}(10)$. Fragmenting the generation across multiple representations increases $D_{\mathrm{ferm}}$ and typically requires additional Higgs structure.
+
+**Step 4 — Higgs/breaking economy.** For any completion, realising $G(\mathcal{L}) \to G_{\mathrm{SM}}$ with Yukawa completeness and neutrino mass generation requires a functionally complete Higgs sector. Non-minimal carriers typically require additional Higgs irreducible representations, additional intermediate stages, or additional threshold structure — all of which inflate $D_{\mathrm{H}}$.
+
+**Step 5 — Rank overgrowth.** If the carrier group is larger than $\mathrm{SO}(10)$ without being forced by the record, the rank penalty $\gamma,\mathrm{rk}(G)$ strictly increases. Under the decoupling lock, record-silent overgrowth cannot reduce other terms enough to compensate.
+
+The combined result is strict dominance: $\mathrm{Comp}(\mathcal{L}) > \mathrm{Comp}(\mathrm{SO}(10))$ unless $\mathcal{L}$ is $\partial$-equivalent to the $\mathrm{SO}(10)$ benchmark. The carrier is forced.
+
+---
+
+## 7. The Competitive Exclusion — Carrier by Carrier
+
+The forcing theorem is not abstract. Each standard GUT candidate is tested and explicitly excluded:
+
+**$\mathrm{SU}(5)$ (Georgi-Glashow).** The fundamental matter representations of $\mathrm{SU}(5)$ — the $\bar{\mathbf{5}} \oplus \mathbf{10}$ decomposition — account for only 15 of the 16 states in a full generation. The right-handed neutrino is not included. Accommodating neutrino mass requires adding $\nu_R$ as an external singlet, which means the seesaw mechanism needs additional Higgs structure (typically a $\mathbf{15}*H$ or higher representation) to generate the Majorana mass $M_R$. This inflates $D*{\mathrm{H}}$ and fails the neutrino rigidity criterion. The minimal $\mathrm{SU}(5)$ Higgs sector also faces the notorious doublet-triplet splitting problem — an exact cancellation that constitutes fine-tuning and violates $\Delta$-stability.
+
+**Flipped $\mathrm{SU}(5) \times \mathrm{U}(1)$.** Rearranging fermion assignments within an $\mathrm{SU}(5) \times \mathrm{U}(1)$ structure introduces abelian mixing freedom not fixed by a simple carrier embedding. The construction requires additional breaking structure to reach the Standard Model, incurring intermediate-stage penalties $\delta_{\mathrm{break}}$ and inflating $D_{\mathrm{H}}$.
+
+**$\mathrm{E}_6$ and larger exceptional groups.** $\mathrm{E}*6$ unifies one generation in the $\mathbf{27}$ representation — which contains 27 states per generation, 11 more than needed. These additional states are chiral exotics that are not forced by the Standard Model record. They must be made heavy by additional Higgs mechanisms, raising $D*{\mathrm{ferm}}$, $D_{\mathrm{H}}$, and $\mathrm{rk}(G)$ simultaneously. The problem only worsens for $\mathrm{E}_7$ and $\mathrm{E}_8$.
+
+**Pati-Salam $\mathrm{SU}(4) \times \mathrm{SU}(2)_L \times \mathrm{SU}(2)_R$.** Not a simple group — it is a semi-simple product. Reaching the Standard Model requires additional symmetry breaking, which inflates $D_{\mathrm{H}}$ and incurs intermediate-stage penalties. While Pati-Salam is often treated as an intermediate stage in $\mathrm{SO}(10)$ breaking, as a *final carrier* it is strictly dominated.
+
+**Trinification $\mathrm{SU}(3)^3$.** Fails neutrino rigidity and requires exotic structure not forced by the record.
+
+<table>
+  <thead>
+    <tr>
+      <th>Carrier</th>
+      <th>Anomaly Closure</th>
+      <th>Neutrino Rigidity</th>
+      <th>Higgs Minimal</th>
+      <th>$\Omega$-initial?</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>$\mathrm{SO}(10)$</td>
+      <td>✓</td>
+      <td>✓</td>
+      <td>✓</td>
+      <td><strong>Yes</strong></td>
+    </tr>
+    <tr>
+      <td>$\mathrm{SU}(5)$</td>
+      <td>✓</td>
+      <td>✗ (external $\nu_R$)</td>
+      <td>✗</td>
+      <td>No</td>
+    </tr>
+    <tr>
+      <td>Flipped $\mathrm{SU}(5)$</td>
+      <td>✓</td>
+      <td>Partial</td>
+      <td>✗ (extra breaking)</td>
+      <td>No</td>
+    </tr>
+    <tr>
+      <td>$\mathrm{E}_6$</td>
+      <td>✓</td>
+      <td>✓</td>
+      <td>✗ (exotic surplus)</td>
+      <td>No</td>
+    </tr>
+    <tr>
+      <td>Pati-Salam</td>
+      <td>✓</td>
+      <td>Partial</td>
+      <td>✗ (not simple)</td>
+      <td>No</td>
+    </tr>
+    <tr>
+      <td>Trinification</td>
+      <td>✓</td>
+      <td>✗</td>
+      <td>✗</td>
+      <td>No</td>
+    </tr>
+  </tbody>
+</table>
+
+$\mathrm{SO}(10)$ is the only carrier that closes all constraints simultaneously with minimal structural cost.
+
+---
+
+## 8. The $5/3$ Factor Without Assuming Any Unified Group
+
+A common objection to selection frameworks is that they might simply be restating conventional results in new language. To address this directly, the framework derives a famous, concrete GUT invariant from first principles — without assuming any unified group as input.
+
+The canonical hypercharge normalisation factor:
+
+$$
+g_1^2 = \frac{5}{3}, g_Y^2
+$$
+
+This factor is traditionally obtained by embedding $\mathrm{U}(1)_Y$ into $\mathrm{SU}(5)$ and matching trace normalisations. In the determinant-closed framework, it is derived using only three ingredients:
+
+**Anomaly closure fixes hypercharge ratios.** The mixed anomaly equations — $[\mathrm{SU}(2)_L]^2\mathrm{U}(1)_Y$, $[\mathrm{SU}(3)_c]^2\mathrm{U}(1)_Y$, $\mathrm{grav}^2\mathrm{U}(1)_Y$, and $[\mathrm{U}(1)_Y]^3$ — together with the existence of Yukawa couplings, uniquely determine all hypercharge ratios within a generation up to an overall rescaling.
+
+**Quadratic trace matching fixes the scale.** Define the record trace of a generator $X$ as the sum of squared eigenvalues over all left-handed Weyl fermion states in one generation. For hypercharge, this gives $\mathrm{Tr}_{\mathrm{rec}}(Y^2) = 10/3$. For the $\mathrm{SU}(2)*L$ Cartan generator $T_3$, it gives $\mathrm{Tr}*{\mathrm{rec}}(T_3^2) = 2$.
+
+**Normalisation matching.** Requiring the normalised hypercharge generator $\hat{Y} = c,Y$ to satisfy $\mathrm{Tr}*{\mathrm{rec}}(\hat{Y}^2) = \mathrm{Tr}*{\mathrm{rec}}(T_3^2)$ yields $c^2 = 3/5$, and therefore $g_1 = g_Y\sqrt{5/3}$.
+
+The significance: a numerical invariant that has been treated for fifty years as evidence *for* $\mathrm{SU}(5)$ unification is shown to follow from the record predicates alone, without assuming any embedding. It is a *closure invariant* — a structural consequence of anomaly cancellation and trace normalisation on the minimal chiral template. The fact that it coincides with the $\mathrm{SU}(5)$ prediction is not a coincidence. It is confirmation that the record predicates already encode the unification structure before any group-theoretic ansatz is imposed.
+
+---
+
+## 9. Unique Breaking Architecture and Minimal Higgs Content
+
+In standard $\mathrm{SO}(10)$ model-building, even after selecting the carrier, there remains enormous freedom in choosing symmetry-breaking routes and Higgs representations. Pati-Salam chains, left-right intermediate symmetries, multiple Higgs irreducible representations ($\mathbf{10}_H$, $\mathbf{45}_H$, $\mathbf{54}_H$, $\mathbf{120}_H$, $\overline{\mathbf{126}}_H$, $\mathbf{210}_H$) — the model-building literature is vast.
+
+The determinant-closed framework collapses this freedom to a single architecture.
+
+> **Theorem (Unique Breaking Chain).** Among all $\Delta$-stable, functionally complete breaking chains from $\mathrm{SO}(10)$ to $G_{\mathrm{SM}}$ compatible with anomaly closure, RG consistency, and neutrino rigidity, there exists a unique minimiser of the Higgs budget $D_{\mathrm{H}}$ up to $\partial$-equivalence, represented by:
+>
+> $$\mathrm{SO}(10) \xrightarrow{\ \langle\overline{\mathbf{126}}_H\rangle\ } \mathrm{SU}(5) \xrightarrow{\ \langle\mathbf{10}*H\rangle\ } G*{\mathrm{SM}}$$
+
+The two Higgs representations each perform a structurally necessary role:
+
+$\overline{\mathbf{126}}_H$ is the unique minimal Higgs irreducible representation that simultaneously triggers $B - L$ breaking and generates the right-handed Majorana mass $M_R$, realising the neutrino seesaw class with minimal Higgs cost.
+
+$\mathbf{10}_H$ supplies electroweak Higgs doublets and permits the standard Yukawa couplings for charged fermion masses while remaining minimal in the Higgs budget.
+
+Any Higgs irreducible representation beyond $\mathbf{10}_H \oplus \overline{\mathbf{126}}_H$ is either redundant under $\Delta$ (record-indistinguishable and therefore collapsed), disallowed by $\Delta$-stability (introducing non-record branching complexity), or strictly complexity-increasing. The commonly considered additions — $\mathbf{45}_H$, $\mathbf{54}_H$, $\mathbf{120}_H$, $\mathbf{210}_H$ — are all non-minimal unless forced by new record data not present at $\mu_L$.
+
+This is the result that transforms $\mathrm{SO}(10)$ from a *family* of models into a *single* law-selected architecture. The model-building knobs are not freely adjustable — they are either collapsed by degeneracy, quotiented by record-silence, or excluded by minimality.
+
+---
+
+## 10. The Collapse of Model-Building Freedom
+
+The preceding sections establish three rigidity theorems that, taken together, constitute a comprehensive collapse of the conventional freedom in GUT construction:
+
+**Carrier rigidity.** $\mathrm{SO}(10)$ is forced as the unique $\Omega$-initial carrier.
+
+**Neutrino rigidity.** The neutrino sector collapses to the seesaw equivalence class.
+
+**Breaking rigidity.** The $\Delta$-stable breaking chain and minimal Higgs content are unique up to $\partial$-equivalence.
+
+The mechanism behind this collapse is precise:
+
+Any modification of a completion that leaves the record predicates $R(\mu_L)$ unchanged is either *removed* by $\partial$ (it is record-silent), *identified* by $\Delta$ (it is prediction-degenerate), or *penalised* by $\mathrm{Comp}$ (it inflates structural cost). In no case can such a modification alter the $\Omega$-initial selection.
+
+This is not a preference for simplicity in the aesthetic sense. It is a *structural collapse* induced by three explicit mathematical operations. The framework does not declare $\mathrm{SO}(10)$ minimal because it is popular or elegant. It declares it minimal because every alternative requires record-visible surplus, intermediate non-record branching, or carrier overgrowth to realise the same record predicates — and all of these are penalised.
+
+---
+
+## 11. What This Does Not Claim
+
+Precision about scope is as important as precision about results. This work explicitly does not:
+
+Predict fermion masses, Yukawa couplings, or mixing parameters. The selection operates at the structural level (gauge group, representations, generation count) and does not extend to continuous flavour parameters. A separate result — the Yukawa no-go theorem — proves that exact Yukawa ratios are *not* law-level quantities within the same framework.
+
+Model symmetry-breaking dynamics. The breaking chain is identified as a structural architecture, not as a dynamical history with specified scalar potentials, vacuum expectation values, or phase transitions.
+
+Assume supersymmetry, extra dimensions, or string theory. These may be compatible with the forced completion but are not required for the forcing argument.
+
+Claim that alternative GUTs are mathematically inconsistent. $\mathrm{SU}(5)$, $\mathrm{E}_6$, and all other candidates are perfectly well-defined mathematical structures. They are simply not $\Omega$-initial under the stated admissibility and minimality conditions — they cost more structure than the record can justify.
+
+Replace detailed phenomenological studies. Proton decay rates, threshold corrections, detailed RG running, and flavour structure all remain important physics problems. The framework provides the structural backbone within which such studies proceed.
+
+---
+
+## 12. What This Means for Particle Physics
+
+### Unification is forced, not hypothesised
+
+For fifty years, the choice of a Grand Unified group has been treated as a theoretical hypothesis — an ansatz selected by physicists on the basis of elegance, convenience, or phenomenological success. The present work eliminates that freedom. Under determinant-closed admissibility, the Standard Model record predicates *force* $\mathrm{SO}(10)$ as the unique law-bearing completion. The question "which GUT?" has a unique, derived answer.
+
+### The right-handed neutrino is structurally mandated
+
+The $\mathrm{SO}(10)$ spinor $\mathbf{16}_F$ includes $\nu_R$ as the sixteenth component. Its presence is a structural consequence of carrier selection, not a phenomenological addition. The experimental discovery of neutrino oscillations is therefore not merely *accommodated* by the framework — it is *postdicted* by the representation theory before any neutrino data is used as input.
+
+### The seesaw mechanism is the unique admissible mass generation
+
+Among all possible neutrino mass mechanisms, closure admissibility and minimality select the seesaw equivalence class as the unique fixed point. Purely Dirac-only scenarios are excluded. This provides a structural foundation for what has been, until now, a phenomenologically motivated but theoretically underdetermined choice.
+
+### The $5/3$ factor is a closure invariant
+
+The canonical GUT hypercharge normalisation — traditionally evidence for $\mathrm{SU}(5)$ embedding — is derived here from the record predicates alone, without assuming any unified group. It is a structural invariant of anomaly closure and trace normalisation on the minimal chiral template.
+
+### Model-building freedom is an illusion
+
+The apparent freedom to choose Higgs representations, breaking chains, intermediate scales, and threshold structures within $\mathrm{SO}(10)$ is eliminated by the admissibility framework. A unique minimal architecture is selected. The conventional knobs are either record-silent (and therefore quotiented out), prediction-degenerate (and therefore collapsed), or complexity-increasing (and therefore excluded). $\mathrm{SO}(10)$ unification is not a family of models. It is a single, determined architecture.
+
+### The result is traditional — the logic is not
+
+What emerges looks familiar to any GUT phenomenologist: $\mathrm{SO}(10)$ with the $\mathbf{16}$ spinor, seesaw neutrino masses, the $5/3$ normalisation, a minimal Higgs sector. But the status of these facts has changed. They are not motivations for choosing a model. They are *outputs* of a selection principle. The framework does not assume unification. It shows that unification is the only law-bearing completion compatible with the record.
+
+$$
+\mathcal{L} = \Omega,\Delta,\partial(\mathcal{L})
+$$
+
+One admissibility condition. One complexity functional. One answer.
+
+---
+
+**Author:** Jeremy Rodgers
+**Framework:** Tier-0 / The Everything Equation
+**Supporting papers:** See the papers section below for full technical details, proofs, and formal statements.
+
+© 2026 Jeremy Rodgers. All rights reserved. Content released under CC BY-NC-ND 4.0 unless otherwise stated.
